docs: update README, add sql data file